--- a/templates/fortune_result.html
+++ b/templates/fortune_result.html
@@ -14,7 +14,7 @@
   <!-- 🟡 Kakao SDK -->
   <script src="https://developers.kakao.com/sdk/js/kakao.js"></script>
   <script>
-    Kakao.init('여기에_너의_카카오_JavaScript_키'); // 예: Kakao.init('1234abcd...');
+    Kakao.init('1642da286406de685d9da6a719a1a8fb'); // 예: Kakao.init('1234abcd...');
   </script>
 
   <style>
