--- a/templates/fortune_result.html
+++ b/templates/fortune_result.html
@@ -72,7 +72,7 @@
     <p>행운이 가득하길 바랄게!</p>
 
     <div class="buttons">
-      <form action="{{ url_for('greeting') }}">
+      <form action="{{ url_for('fortune') }}">
         <button type="submit">🔄 다시 보기</button>
       </form>
       <button onclick="copyLink()">🔗 공유 링크 복사</button>
