--- a/templates/fortune_loading.html
+++ b/templates/fortune_loading.html
@@ -39,7 +39,7 @@
   <div class="container">
     <h2>{{ name }}의 운세를 점치는 중이에요 🔮</h2>
     <p class="loading-text">잠시만 기다려 주세요...</p>
-    <img src="{{ url_for('static', filename='fortune.gif') }}" alt="운세 불러오는 중">
+    <img src="{{ url_for('static', filename='gif/fortune.gif') }}" alt="운세 불러오는 중♥">
   </div>
 </body>
 </html>
